# kinect-registration

./: CMakeLists.txt  CONTRIB  README  fix.cpp  fix.h  main.cpp  registration.h  serialization.cpp  serialization.h
